trunk/Archive2/55/f5aab2b594e8ef/output
main.cpp: In function 'typename std::enable_if<std::is_const< <template-parameter-1-1> >::value, typename std::iterator_traits<_Iterator>::value_type>::type Median(Iterator, Iterator, Func)':
main.cpp:20:56: error: 'src_cpy_end' was not declared in this scope
   std::nth_element(src_begin, src_begin + (count / 2), src_cpy_end,
                                                        ^
